add_library(darp STATIC    "RoutePlanner.h" "RoutePlanner.cpp" "BruteSDARP.h" "BruteSDARP.cpp" "Graph.h" "Graph.cpp" "DarpSolver.h" "DarpSolver.cpp" "DarpSolverBF.h" "DarpSolverBF.cpp"  "Helpers.h" "Helpers.cpp" "HAC.h" "HAC.cpp"   "DarpSolverHAC.h" "DarpSolverHAC.cpp"   "GreedySDARP.h" "GreedySDARP.cpp" "Kmeans.h" "Kmeans.cpp")
